// Copyright 2023 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;
option go_package = "github.com/pipe-cd/pipecd/pkg/model";

import "validate/validate.proto";
import "pkg/model/common.proto";
import "pkg/model/deployment.proto";

message Application {
    reserved 3;

    // The generated unique identifier.
    string id = 1 [(validate.rules).string.min_len = 1];
    // The name of the application.
    string name = 2 [(validate.rules).string.min_len = 1];
    // The ID of the piped that should handle this application.
    string piped_id = 4 [(validate.rules).string.min_len = 1];
    // The ID of the project this application belongs to.
    string project_id = 5 [(validate.rules).string.min_len = 1];
    // What kind of this application.
    ApplicationKind kind = 6 [(validate.rules).enum.defined_only = true];
    // The path to the git directory of this application.
    ApplicationGitPath git_path = 7 [(validate.rules).message.required = true];
    // The name of cloud provider where to deploy this application.
    // This must be one of the provider names registered in the piped.
    string cloud_provider = 8 [deprecated=true];
    // The name of platform provider where to deploy this application.
    // This must be one of the provider names registered in the piped.
    // TODO: Add validation for this field.
    string platform_provider = 15;
    // Additional description about application.
    string description = 9;
    // Custom attributes to identify applications.
    map<string, string> labels = 10;

    // Basic information about the most recently successful deployment.
    // This also shows information about current running workloads.
    ApplicationDeploymentReference most_recently_successful_deployment = 11;
    // Basic information about the most recently trigered deployment.
    ApplicationDeploymentReference most_recently_triggered_deployment = 12;

    // Current sync state.
    ApplicationSyncState sync_state = 13;
    // Whether the application is deploying or not.
    bool deploying = 14;

    // Unix time when the application was deleted.
    int64 deleted_at = 98 [(validate.rules).int64.gte = 0];
    // Whether the application is deleted or not.
    bool deleted = 99;
    // Whether the application is disabled or not.
    bool disabled = 100;
    // Unix time when the application is created.
    int64 created_at = 101 [(validate.rules).int64.gt = 0];
    // Unix time of the last time when the application is updated.
    int64 updated_at = 102 [(validate.rules).int64.gt = 0];
}

// ApplicationSyncStatus represents the current state of syncing the application.
enum ApplicationSyncStatus {
    UNKNOWN = 0;
    SYNCED = 1;
    DEPLOYING = 2;
    OUT_OF_SYNC = 3;
    INVALID_CONFIG = 4;
}

// Current sync state of a specific application.
// This part is determined by drift detector component of piped.
message ApplicationSyncState {
    ApplicationSyncStatus status = 1 [(validate.rules).enum.defined_only = true];
    string short_reason = 2;
    string reason = 3;
    string head_deployment_id = 4;
    int64 timestamp = 5 [(validate.rules).int64.gt = 0];
}

message ApplicationDeploymentReference {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    DeploymentTrigger trigger = 2 [(validate.rules).message.required = true];
    string summary = 3;
    string version = 4;
    string config_filename = 5;
    repeated ArtifactVersion versions = 6;

    int64 started_at = 14 [(validate.rules).int64.gt = 0];
    int64 completed_at = 15 [(validate.rules).int64.gte = 0];
}
